# elyx

./: .gitignore  Cargo.toml  README.md  test.REST
migrations/: 20260225072105_create_users.sql  20260226111324_create_notes.sql
src/: core.rs  main.rs
src/core/: config.rs  db.rs  error.rs
src/features/: auth.rs
src/features/auth/: handler.rs  jwt.rs  middleware.rs  model.rs  repository.rs  service.rs
src/features/notes/: handler.rs  model.rs  repository.rs  service.rs
